; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_geoip2.c_geoip_free.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_geoip2.c_geoip_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mmdb = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @geoip_free() #0 {
  %1 = call i32 (...) @is_geoip_resource()
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %9

4:                                                ; preds = %0
  %5 = load i32*, i32** @mmdb, align 8
  %6 = call i32 @MMDB_close(i32* %5)
  %7 = load i32*, i32** @mmdb, align 8
  %8 = call i32 @free(i32* %7)
  store i32* null, i32** @mmdb, align 8
  br label %9

9:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @is_geoip_resource(...) #1

declare dso_local i32 @MMDB_close(i32*) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
